--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 #form1 {
     text-align: center;
 }
@@ -9,6 +8,7 @@
     margin: 0 auto;
     margin-bottom: 15px;
 }
+
 #sbox {
     outline: 0;
     height: 50px;
@@ -16,7 +16,7 @@
     border-radius: 2px 0 0 2px;
     background: #eee;
     width: 100%;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 #sbtn {
@@ -73,6 +73,7 @@ input[type="checkbox"] {
   input[type="checkbox"]::after {
     border-bottom: 3px solid #666464;
     border-left: 3px solid #666464;
+    opacity: 0;
     height: 6px;
     width: 11px;
     transform: rotate(-45deg);
